# auth-server

./: .env  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml
.sqlx/: query-0c2a42522e1a02296027ae5d52d3d413cb313474db3422f7c4e70a4c6f586f57.json  query-15b03c4527c5cde908bdf776d0a08d4ff11d0f5f8bf6520dea5e50642e92966d.json  query-2b3dc5906bd805a17a8fb2355b35a8489dfa37fb49bc0f3800fe0ec1cfb5b5db.json  query-399987145ad91809aa73dfd5b19f57df014d6f53acd97b479bc15151ccb229ec.json  query-420e1a8f5e8d12ac173a119738864a935677a8a633b56aac35de11a1814e6bf0.json  query-5b7a632d6198f544f1cdc5c91882ecdaca769fba1283b659547d836bdd0e3050.json  query-6c3658fc09b215727fbd49b9fa1d5cb88a3269d17ed2276c32f03a694ee161af.json  query-86c71200745b29c913dde48645604498dae1d01d7e369761d93570209f3678ad.json  query-8730713933954a6c74b97f00ca7e509232637c19a30a1eee07ceda81dab3d9b8.json  query-9dda1b7127bc369268bee0679ca6ddec847be43cdf53cf6a05a8b575c666a781.json  query-f88f622f51b1c42e1e48ee7e170c3c4d9b78ae241d5c74f51cb13d27e077e703.json
config/: base.yaml  test.yaml
configuration/: base.yaml  test.yaml
migrations/: 20240322142256_initial.sql
scripts/: init_db.sh
src/: error.rs  extractors.rs  lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/domain/: email.rs
src/handlers/: health_check.rs  mod.rs
src/handlers/auth/: error.rs  mod.rs  sign_in.rs  sign_out.rs  sign_up.rs  tokens.rs
tests/api/: health_check.rs  helpers.rs
tests/api/auth/: mod.rs  sign_in.rs  sign_out.rs  sign_up.rs  tokens.rs
