[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "auth-server"


[dependencies]
# tokio
tokio = { version = "1.52.1", features = ["full"] }

# http
axum = { version = "0.8.9", features = ["tracing", "tokio"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util"] }
problemdetails = { version = "0.6.0", features = ["axum"] }

# db
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
] }

# serde
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.18.0" }
serde-aux = { version = "4.7.0" }
serde_json = { version = "1.0.149" }

# tracing
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-log = { version = "0.2.0" }

# crypto
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# validations
validator = { version = "0.20.0" }

# errors
thiserror = { version = "2.0.18" }
anyhow = { version = "1.0.102" }

# utils
chrono = { version = "0.4.44", features = ["serde"] }
config = { version = "0.15.22" }
secrecy = { version = "0.10.3", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
once_cell = { version = "1.21.4" }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
claim = { version = "0.5.0" }
fake = { version = "5.1.0" }
quickcheck = { version = "1.1.0" }
quickcheck_macros = { version = "1.2.0" }
